--- a/TPWeb-Fernandez-Zumsteind/Site1.Master
+++ b/TPWeb-Fernandez-Zumsteind/Site1.Master
@@ -5,6 +5,7 @@
 <html>
 <head runat="server">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="Content/Style.css" rel="stylesheet" />
     <title>Catálogo</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -13,25 +14,25 @@
     <form id="form1" runat="server">
         <div>
             <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
-              <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/default.aspx">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/Articulos.aspx">Artículos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Mi carrito</a>
-                    </li>
-                  </ul>
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/default.aspx">Electronics</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/default.aspx">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/catalogo.aspx">Catálogo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Mi carrito</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-              </div>
             </nav>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
