--- a/TPWeb-Fernandez-Zumsteind/Site1.Master
+++ b/TPWeb-Fernandez-Zumsteind/Site1.Master
@@ -12,29 +12,32 @@
 <body>
     <form id="form1" runat="server">
         <div>
-            <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+            <nav class="navbar navbar-expand-lg" style="background-color:brown; ">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="/administrar.aspx" style="color:white">ADMINISTRAR</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/default.aspx">Home</a>
+                      <a class="nav-link active" aria-current="page" href="/default.aspx" style="color:white" >Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/Articulos.aspx">Artículos</a>
+                      <a class="nav-link" href="/Articulos.aspx" style="color:white" style="color:white">Artículos</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Mi carrito</a>
+                      <a class="nav-link" href="#" style="color:white">Mi carrito</a>
                     </li>
                   </ul>
                 </div>
               </div>
             </nav>
+
+          <div class="container">  
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
+              </div>
         </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
