Agrege parametros por url a carrito, pero falta verificar las , de cada button q se pasan vacios

--- a/TPWeb-Fernandez-Zumsteind/Site1.Master
+++ b/TPWeb-Fernandez-Zumsteind/Site1.Master
@@ -27,7 +27,7 @@
                       <a class="nav-link" href="/Articulos.aspx" style="color:white" style="color:white">Artículos</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#" style="color:white">Mi carrito</a>
+                      <a class="nav-link" href="/carrito.aspx" style="color:white">Mi carrito</a>
                     </li>
                   </ul>
                 </div>
